sir_robot_ros_interface/sir_robot_ros_interface/tests/output.txt

STATUS = 1
HOLD = 0
STATUS = 1
HOLD = 0
STATUS = 1
HOLD = 0
STATUS = 1
HOLD = 0
STATUS = 1
HOLD = 0
STATUS = 1
HOLD = 0
STATUS = 0
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...
Connected...
STATUS = 0
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...
Connected...
STATUS = 0
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...
Connected...
STATUS = 0
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...
Connected...
STATUS = 0
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...
Connected...
^C[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getStatus: could not receive correct answer
STATUS = 2
Segmentation fault (core dumped)



[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getStatus: could not receive correct answer
STATUS = 2
HOLD = 1
[ERROR]: SIRWinConnection::Send, send error:
9
[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getStatus: could not receive correct answer
STATUS = 2
[ERROR]: SIRWinConnection::Send, send error:
9
[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::continue: could not receive correct answer
HOLD = 0
Connected...
STATUS = 0
HOLD = 0
after while
stopped at wrong position
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...



[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getStatus: could not receive correct answer
STATUS = 2
HOLD = 0
[ERROR]: SIRLinConnection::Connect, connect() failed! Error code:
111
------CONNECTION FAILED------
[ERROR]: SIRWinConnection::Send, send error:
9
[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getStatus: could not receive correct answer
STATUS = 2
HOLD = 0
------CONNECTED------
STATUS = 0
HOLD = 0
after while
stopped at wrong position
[INFO]: SIRLinConnection::disconnect, Closing "SendingSocket" socket...



HOLD = 1
STATUS = 0
------CONTINUE------
HOLD = 0
------CONNECTED------
------EXIT------
after while
[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::getJointPose: could not receive correct answer
stopped at wrong position
[ERROR]: SIRRobotPacketParser::parse: Invalid packet type
[ERROR]: KawasakiRS005LRobot::close: could not receive correct answer
